# yt-dlp-SpotifyCanvas

./: README.md  pyproject.toml  setup.cfg
yt_dlp_plugins/extractor/: spotifycanvas.py
yt_dlp_plugins/extractor/proto/: canvas.proto  canvas_pb2.py
