[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project]
name = "yt-dlp-SpotifyCanvas"
description = "A yt-dlp extractor plugin for downloading Spotify Canvas videos"
version = "2025.07.15"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "protobuf",
  "pyotp",
]
